test/type/fail/non_callable_dot_non_class.j
class A {
  Void main() {
    (1 + 2).a();
    return;
  }
}
